--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,27 +3,7 @@ ext.mainApp = true
 apply from: rootProject.file('cc-settings-2.gradle')
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-android {
-    compileSdkVersion rootProject.ext.android["compileSdkVersion"]
-    buildToolsVersion rootProject.ext.android["buildToolsVersion"]
-    defaultConfig {
-        applicationId rootProject.ext.android["applicationId"]
-        minSdkVersion rootProject.ext.android["minSdkVersion"]
-        targetSdkVersion rootProject.ext.android["targetSdkVersion"]
-        versionCode rootProject.ext.android["versionCode"]
-        versionName rootProject.ext.android["versionName"]
-        multiDexEnabled true
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-
-}
+configAndroidDomain project
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -34,7 +14,10 @@ dependencies {
     implementation rootProject.ext.dependencies["appcompat:1.1.0"]
     implementation rootProject.ext.dependencies["core-ktx:1.2.0"]
     implementation rootProject.ext.dependencies["constraintlayout:1.1.3"]
+    implementation rootProject.ext.dependencies["blankj_utilcode"]
+    implementation project(":base_lib")
     addComponent 'dome_a'
     addComponent 'dome_b'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
 }
