--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,5 @@
 //标记为主app module
-ext.mainApp = true
-apply from: rootProject.file('cc-settings-2.gradle')
+apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 configAndroidDomain project
@@ -15,9 +14,9 @@ dependencies {
     implementation rootProject.ext.dependencies["core-ktx:1.2.0"]
     implementation rootProject.ext.dependencies["constraintlayout:1.1.3"]
     implementation rootProject.ext.dependencies["blankj_utilcode"]
-    implementation project(":base_lib")
-    addComponent 'dome_a'
-    addComponent 'dome_b'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation rootProject.ext.dependencies["lifecycle-extensions:2.2.0"]
+    implementation project(':base_core')
+    annotationProcessor rootProject.ext.annotationProcessor["arouter-compiler"]
+
 
 }
