--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name='baseProject'
 include ':app'
 include ':dome_a'
 include ':dome_b'
-include ':base_lib'
+include ':base_core'
+include ':app_on_the_way'
