组件化结构

--- a/base_core/build.gradle
+++ b/base_core/build.gradle
@@ -11,9 +11,9 @@ dependencies {
     api rootProject.ext.dependencies["constraintlayout:1.1.3"]
     api rootProject.ext.dependencies["blankj_utilcode"]
     api rootProject.ext.dependencies["lifecycle-extensions:2.2.0"]
-//    api rootProject.ext.dependencies["arouter-api"]
+    api rootProject.ext.dependencies["arouter-api"]
     //日志工具类
     api 'com.apkfuns.logutils:library:1.5.1.1'
-//    annotationProcessor rootProject.ext.annotationProcessor["arouter-compiler"]
+    annotationProcessor rootProject.ext.annotationProcessor["arouter-compiler"]
 
 }
