--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,10 +13,10 @@ dependencies {
     implementation rootProject.ext.dependencies["appcompat:1.1.0"]
     implementation rootProject.ext.dependencies["core-ktx:1.2.0"]
     implementation rootProject.ext.dependencies["constraintlayout:1.1.3"]
-    implementation rootProject.ext.dependencies["blankj_utilcode"]
+    implementation rootProject.ext.dependencies["blankj_utilcodex"]
     implementation rootProject.ext.dependencies["lifecycle-extensions:2.2.0"]
     implementation project(':base_core')
-    annotationProcessor rootProject.ext.annotationProcessor["arouter-compiler"]
+//    annotationProcessor rootProject.ext.annotationProcessor["arouter-compiler"]
 
 
 }
