--- a/app_on_the_way/build.gradle
+++ b/app_on_the_way/build.gradle
@@ -2,7 +2,8 @@ configApply project
 configAndroidDomain project
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation project(':base_core')
+//    implementation project(':base_core')
+    implementation project(':base_lib')
     //3D地图so及jar
     implementation 'com.amap.api:3dmap:latest.integration'
     //定位功能
