--- a/base_core/build.gradle
+++ b/base_core/build.gradle
@@ -9,11 +9,11 @@ dependencies {
     api rootProject.ext.dependencies["appcompat:1.1.0"]
     api rootProject.ext.dependencies["core-ktx:1.2.0"]
     api rootProject.ext.dependencies["constraintlayout:1.1.3"]
-    api rootProject.ext.dependencies["blankj_utilcode"]
+    api rootProject.ext.dependencies["blankj_utilcodex"]
     api rootProject.ext.dependencies["lifecycle-extensions:2.2.0"]
-    api rootProject.ext.dependencies["arouter-api"]
+//    api rootProject.ext.dependencies["arouter-api"]
     //日志工具类
     api 'com.apkfuns.logutils:library:1.5.1.1'
-    annotationProcessor rootProject.ext.annotationProcessor["arouter-compiler"]
-
+//    annotationProcessor rootProject.ext.annotationProcessor["arouter-compiler"]
+    implementation 'com.dylanc:loadinghelper:2.1.0'
 }
