--- a/base_core/build.gradle
+++ b/base_core/build.gradle
@@ -11,9 +11,9 @@ dependencies {
     api rootProject.ext.dependencies["constraintlayout:1.1.3"]
     api rootProject.ext.dependencies["blankj_utilcodex"]
     api rootProject.ext.dependencies["lifecycle-extensions:2.2.0"]
-//    api rootProject.ext.dependencies["arouter-api"]
     //日志工具类
     api 'com.apkfuns.logutils:library:1.5.1.1'
-//    annotationProcessor rootProject.ext.annotationProcessor["arouter-compiler"]
     implementation 'com.dylanc:loadinghelper:2.1.0'
+    //网络请求框架
+    api 'com.lzy.net:okgo:3.0.4'
 }
