--- a/base_lib/build.gradle
+++ b/base_lib/build.gradle
@@ -5,6 +5,7 @@ configAndroidDomain project
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(':base_core')
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     api rootProject.ext.dependencies["appcompat:1.1.0"]
     api rootProject.ext.dependencies["core-ktx:1.2.0"]
@@ -12,8 +13,8 @@ dependencies {
     api rootProject.ext.dependencies["blankj_utilcodex"]
     api rootProject.ext.dependencies["lifecycle-extensions:2.2.0"]
     // AVLoadingIndicatorView
-    implementation 'com.wang.avi:library:2.1.3'
-    implementation 'com.dylanc:loadinghelper:2.1.0'
+    api 'com.wang.avi:library:2.1.3'
+    api 'com.dylanc:loadinghelper:2.1.0'
 }
 
 android {
