--- a/base_core/src/main/AndroidManifest.xml
+++ b/base_core/src/main/AndroidManifest.xml
@@ -1,2 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.baselibrary" />
+    package="com.example.baselibrary" >
+<application>
+    <meta-data
+        android:name="design_width_in_dp"
+        android:value="360"/>
+    <meta-data
+        android:name="design_height_in_dp"
+        android:value="640"/>
+</application>
+</manifest>
